--- a/.github/workflows/KamiWrtKai.yml
+++ b/.github/workflows/KamiWrtKai.yml
@@ -188,4 +188,4 @@ jobs:
     
     - name: WeChat推送
       if: env.WECHAT_NOTIFICATION == 'true' && !cancelled()
-      run: curl https://sc.ftqq.com/${{secrets.ServerChan}}.send?text=KamiWrt编译完成!
+      run: curl https://sc.ftqq.com/${{secrets.ServerChan}}.send?text=KamiWrtKai编译完成!
