--- a/.github/workflows/KamiWrtKai.yml
+++ b/.github/workflows/KamiWrtKai.yml
@@ -34,7 +34,7 @@ env:
 jobs:
   build:
     if: github.event.repository.owner.id == github.event.sender.id
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
