--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -16,7 +16,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 # CONFIG_TARGET_KERNEL_PARTSIZE=16
 # CONFIG_TARGET_ROOTFS_PARTSIZE=160
 # 固件语言
-CONFIG_LUCI_LANG_ja=y
+# CONFIG_LUCI_LANG_ja=y
 
 #
 # IPv6
@@ -65,7 +65,7 @@ CONFIG_PACKAGE_luci-app-flowoffload=y
 # CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-ramfree=y
-# CONFIG_PACKAGE_luci-app-rclone=y
+# CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-webadmin=y
