--- a/.github/workflows/KamiWrtKai.yml
+++ b/.github/workflows/KamiWrtKai.yml
@@ -9,8 +9,8 @@ on:
       - master
     paths:
       - '.config'
-  schedule:
-    - cron: 0 0 * * 5
+  # schedule:
+    # - cron: 0 0 * * 5
   # release:
     # types: [published]
   watch:
