--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -16,7 +16,7 @@ CONFIG_TARGET_IMAGES_GZIP=y
 # CONFIG_TARGET_KERNEL_PARTSIZE=16
 # CONFIG_TARGET_ROOTFS_PARTSIZE=160
 # 固件语言
-# CONFIG_LUCI_LANG_ja=y
+CONFIG_LUCI_LANG_ja=n
 
 #
 # IPv6
@@ -57,26 +57,43 @@ CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-flowoffload=y
 # CONFIG_PACKAGE_luci-app-guest-wifi=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-ramfree=y
-# CONFIG_PACKAGE_luci-app-rclone=y
+# CONFIG_PACKAGE_luci-app-rclone=y
+CONFIG_PACKAGE_luci-app-sfe=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_openssh-sftp-server=y
+# CONFIG_PACKAGE_fuse-utils=y
+
 # 自定义添加插件
+# > OpenClash
 CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_libcap-bin=y
+CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_ruby=y
+CONFIG_PACKAGE_ruby-yaml=y
+# > 命令行上传下载
+CONFIG_PACKAGE_lrzsz=y
+# > 应用过滤
 CONFIG_PACKAGE_oaf=y
 CONFIG_PACKAGE_open-app-filter=y
 CONFIG_PACKAGE_luci-app-oaf=y
+# > ServerChan
 CONFIG_PACKAGE_luci-app-serverchan=y
-# CONFIG_PACKAGE_fuse-utils=y
+# > Python3
+CONFIG_PACKAGE_python3-pip=y
+
 # 依赖
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
@@ -85,19 +102,29 @@ CONFIG_PACKAGE_screen=y
 CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_wget=y
+
 # 禁止编译默认安装
+# CONFIG_PACKAGE_luci-app-ssr-plus is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-amule is not set
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
+# CONFIG_PACKAGE_luci-app-flowoffload is not set
 # CONFIG_PACKAGE_luci-app-frpc is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
+# CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 # CONFIG_PACKAGE_luci-app-openvpn-server is not set
 # CONFIG_PACKAGE_luci-app-pptp-server is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
 # CONFIG_PACKAGE_luci-app-samba is not set
 # CONFIG_PACKAGE_luci-app-upnp is not set
+# CONFIG_PACKAGE_luci-app-uugamebooster is not set
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
@@ -105,6 +132,7 @@ CONFIG_PACKAGE_wget=y
 # CONFIG_PACKAGE_luci-app-watchcat=y
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
+
 # LuCI主题
 # CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_luci-theme-argon=y
