--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -52,27 +52,47 @@ CONFIG_PACKAGE_kmod-usb3=y
 # LuCI插件
 #
 # 安装Lean代码库中的插件
+# > 访问时间控制
 CONFIG_PACKAGE_luci-app-accesscontrol=y
+# > aria2下载
 CONFIG_PACKAGE_luci-app-aria2=y
+# > IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
+# > 自动重启
 CONFIG_PACKAGE_luci-app-autoreboot=y
+# > 动态DNS
 CONFIG_PACKAGE_luci-app-ddns=y
+# > Docker
 CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-app-dockerman=y
+# > 磁盘管理大师
 CONFIG_PACKAGE_luci-app-diskman=y
+# > 文件传输
 CONFIG_PACKAGE_luci-app-filetransfer=y
+# > 防火墙
 CONFIG_PACKAGE_luci-app-firewall=y
+# > 访客网络
 # CONFIG_PACKAGE_luci-app-guest-wifi=y
+# > 网络带宽监视器
 CONFIG_PACKAGE_luci-app-nlbwmon=y
+# > luci-app-nlbwmon正常工作所需（依赖于kmod-iptunnel, kmod-gre, pptpd）
+CONFIG_PACKAGE_luci-app-pptp-server=y
+# > 释放内存
 CONFIG_PACKAGE_luci-app-ramfree=y
+# > GoogleDrive挂载
 # CONFIG_PACKAGE_luci-app-rclone=y
+# > Turbo ACC网络加速（与luci-app-flowoffload二选一）
 CONFIG_PACKAGE_luci-app-sfe=y
+# > 流量智能队列管理（QOS）
 CONFIG_PACKAGE_luci-app-sqm=y
+# > 网页终端命令行
 CONFIG_PACKAGE_luci-app-ttyd=y
+# > Web管理页面设置
 CONFIG_PACKAGE_luci-app-webadmin=y
+# > 实时流量监测（依赖于luci-app-nlbwmon）
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
+# > 远程SSH访问
 CONFIG_PACKAGE_openssh-sftp-server=y
-# CONFIG_PACKAGE_fuse-utils=y
 
 # 自定义添加插件
 # > OpenClash
@@ -104,12 +124,6 @@ CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_wget=y
 
 # 禁止编译默认安装
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-amule is not set
@@ -132,6 +146,13 @@ CONFIG_PACKAGE_wget=y
 # CONFIG_PACKAGE_luci-app-watchcat=y
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
+# CONFIG_PACKAGE_luci-app-zerotier is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
 
 # LuCI主题
 # CONFIG_PACKAGE_luci-theme-atmaterial=y
