--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -76,7 +76,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # > 网络带宽监视器
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 # > luci-app-nlbwmon正常工作所需（依赖于kmod-iptunnel, kmod-gre, pptpd）
-# CONFIG_PACKAGE_luci-app-pptp-server=m
+CONFIG_PACKAGE_luci-app-pptp-server=y
 # > 释放内存
 CONFIG_PACKAGE_luci-app-ramfree=y
 # > GoogleDrive挂载
