--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -63,7 +63,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # > 动态DNS
 CONFIG_PACKAGE_luci-app-ddns=y
 # > Docker
-CONFIG_PACKAGE_luci-app-docker=y
+# CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-app-dockerman=y
 # > 磁盘管理大师
 CONFIG_PACKAGE_luci-app-diskman=y
