--- a/.github/workflows/KamiWrtKai.yml
+++ b/.github/workflows/KamiWrtKai.yml
@@ -1,4 +1,4 @@
-name: 编译自宅用软路由改
+name: 编译自宅用软路由LEDE
 
 on:
   repository_dispatch:
@@ -51,6 +51,7 @@ jobs:
         date=$(date +'%y%m%d')
         echo "DATE=$date" >> $GITHUB_ENV
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "START_SECOND=$(date +"%s")" >> $GITHUB_ENV
 
     - name: 编译环境初始化
       env:
@@ -156,7 +157,7 @@ jobs:
         repo_token: ${{ secrets.SUPER_TOKEN }}
         file: ${{env.FIRMWARE}}/*
         asset_name: KamiWrt_firmware
-        tag: ${{env.DATE}}
+        tag: ${{env.FILE_DATE}}
         overwrite: true
         file_glob: true
     
@@ -167,7 +168,7 @@ jobs:
         repo_token: ${{ secrets.SUPER_TOKEN }}
         file: openwrt/bin/KamiWrt_packages.tar
         asset_name: KamiWrt_packages
-        tag: ${{env.DATE}}
+        tag: ${{env.FILE_DATE}}
         overwrite: true
         file_glob: true
 
@@ -193,13 +194,23 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.SUPER_TOKEN }}
 
+    - name: 计算编译时长
+      id: length
+      run: |
+        echo "END_SECOND=$(date +"%s")" >> $GITHUB_ENV
+        timeLength=$[${{env.END_SECOND}}-${{env.START_SECOND}}]
+        timeHour=$[$timeLength/3600]
+        timeMin=$[($timeLength-$timeHour*3600)/60]
+        echo "TIME_HOUR=$timeHour" >> $GITHUB_ENV
+        echo "TIME_MIN=$timeMin" >> $GITHUB_ENV
+
     - name: Telegram推送
       if: env.TELEGRAM_NOTIFICATION == 'true' && !cancelled()
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_CHAT_ID }}
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        args: KamiWrtKai编译完成!
+        args: KamiWrtKaiコンパイル完了！%0D%0A時間：${{env.TIME_HOUR}}時${{env.TIME_MIN}}分
 
 
     - name: WeChat推送
