--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -63,13 +63,14 @@ jobs:
     - name: 计算编译时长
       id: length
       run: |
+        a=$(date +"%s")
         timeLength=$[$(date +"%s")-${{env.START_SECOND}}]
         timeHour=$[$timeLength/3600]
         timeMin=$[($timeLength-$timeHour*3600)/60]
         echo "TIME_HOUR=$timeHour" >> $GITHUB_ENV
         echo "TIME_MIN=$timeMin" >> $GITHUB_ENV
-        a=${{env.TIME_HOUR}}
-        b=${{env.TIME_MIN}}
+        a=$timeHour
+        b=$timeMin
 
     - name: Telegram推送
       if: env.TELEGRAM_NOTIFICATION == 'true' && !cancelled()
