--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -54,7 +54,7 @@ jobs:
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         echo "START_SECOND=$(date +"%s")" >> $GITHUB_ENV
     
-    - name: 通过SSH连接到Actions
+    - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
