--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -5,6 +5,8 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_Generic=y
+# 编译MBR固件
+CONFIG_GRUB_IMAGES=y
 # 编译UEFI固件
 CONFIG_EFI_IMAGES=y
 # 取消编译VMware镜像以及镜像填充
