--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -4,11 +4,11 @@
 # 硬件版本
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_Generic=y
+CONFIG_TARGET_x86_64_DEVICE_generic=y
 # 编译MBR固件
 CONFIG_GRUB_IMAGES=y
 # 编译UEFI固件
-CONFIG_EFI_IMAGES=y
+CONFIG_EFI_IMAGES=n
 # 取消编译VMware镜像以及镜像填充
 # CONFIG_TARGET_IMAGES_PAD is not set
 # CONFIG_VMDK_IMAGES is not set
@@ -57,16 +57,18 @@ CONFIG_PACKAGE_kmod-usb3=y
 # > 访问时间控制
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # > aria2下载
-CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-aria2=n
 # > IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
 # > 自动重启
 CONFIG_PACKAGE_luci-app-autoreboot=y
+# > BaiduPCS-Web
+CONFIG_PACKAGE_luci-app-baidupcs-web=n
 # > 动态DNS
 CONFIG_PACKAGE_luci-app-ddns=y
 # > Docker
 CONFIG_PACKAGE_luci-app-docker=y
-# CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_luci-app-dockerman=y
 # > 磁盘管理大师
 CONFIG_PACKAGE_luci-app-diskman=y
 # > 文件传输
@@ -74,19 +76,21 @@ CONFIG_PACKAGE_luci-app-filetransfer=y
 # > 防火墙
 CONFIG_PACKAGE_luci-app-firewall=y
 # > 访客网络
-# CONFIG_PACKAGE_luci-app-guest-wifi=y
+CONFIG_PACKAGE_luci-app-guest-wifi=n
+# > IPSEC VPN
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
 # > 网络带宽监视器
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 # > luci-app-nlbwmon正常工作所需（依赖于kmod-iptunnel, kmod-gre, pptpd）
-CONFIG_PACKAGE_luci-app-pptp-server=y
+# CONFIG_PACKAGE_luci-app-pptp-server is not set
 # > 释放内存
 CONFIG_PACKAGE_luci-app-ramfree=y
-# > GoogleDrive挂载
-# CONFIG_PACKAGE_luci-app-rclone=y
 # > Turbo ACC网络加速（与luci-app-flowoffload二选一）
 CONFIG_PACKAGE_luci-app-sfe=y
 # > 流量智能队列管理（QOS）
 CONFIG_PACKAGE_luci-app-sqm=y
+# > SSR-Plus
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 # > 网页终端命令行
 CONFIG_PACKAGE_luci-app-ttyd=y
 # > Web管理页面设置
@@ -96,23 +100,28 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # > 远程SSH访问
 CONFIG_PACKAGE_openssh-sftp-server=y
 
-# 自定义添加插件
+# 安装自定义添加插件
 # > OpenClash
 CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
-CONFIG_PACKAGE_libcap-bin=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_ruby=y
 CONFIG_PACKAGE_ruby-yaml=y
-# > 命令行上传下载
-CONFIG_PACKAGE_lrzsz=y
-# > 应用过滤
-CONFIG_PACKAGE_oaf=y
-CONFIG_PACKAGE_open-app-filter=y
-CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_libgcc1=y
+
 # > ServerChan
 CONFIG_PACKAGE_luci-app-serverchan=y
+
+# > 命令行上传下载
+CONFIG_PACKAGE_lrzsz=y
+
+# > 应用过滤
+CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_oaf=y
+CONFIG_PACKAGE_open-app-filter=y
+
 # > Python3
 CONFIG_PACKAGE_python3-pip=y
 
@@ -122,41 +131,20 @@ CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_screen=y
 CONFIG_PACKAGE_tree=y
-CONFIG_PACKAGE_vim-fuller=y
+CONFIG_PACKAGE_vim-fuller=n
 CONFIG_PACKAGE_wget=y
 
 # 禁止编译默认安装
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-# CONFIG_PACKAGE_luci-app-airplay2 is not set
-# CONFIG_PACKAGE_luci-app-amule is not set
-# CONFIG_PACKAGE_luci-app-baidupcs-web=y
-# CONFIG_PACKAGE_luci-app-flowoffload is not set
-# CONFIG_PACKAGE_luci-app-frpc is not set
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-# CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
-# CONFIG_PACKAGE_luci-app-music-remote-center is not set
-# CONFIG_PACKAGE_luci-app-openvpn-server is not set
-# CONFIG_PACKAGE_luci-app-pptp-server is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
-# CONFIG_PACKAGE_luci-app-samba is not set
 # CONFIG_PACKAGE_luci-app-upnp is not set
-# CONFIG_PACKAGE_luci-app-uugamebooster is not set
-# CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
-# CONFIG_PACKAGE_luci-app-watchcat=y
+# CONFIG_PACKAGE_luci-app-wireguard is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
 
 # LuCI主题
-# CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_luci-theme-argon=y
-
