--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -114,6 +114,9 @@ CONFIG_PACKAGE_libgcc1=y
 # > ServerChan
 CONFIG_PACKAGE_luci-app-serverchan=y
 
+# > KamiWrtBot
+CONFIG_PACKAGE_KamiWrtBot=y
+
 # > 命令行上传下载
 CONFIG_PACKAGE_lrzsz=y
 
