--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -105,6 +105,7 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_ruby=y
@@ -127,6 +128,9 @@ CONFIG_PACKAGE_open-app-filter=y
 
 # > Python3
 CONFIG_PACKAGE_python3-pip=y
+
+# > Adguard Home
+CONFIG_PACKAGE_luci-app-adguardhome=y
 
 # 依赖
 CONFIG_PACKAGE_curl=y
