--- a/KamiWrt.config
+++ b/KamiWrt.config
@@ -30,8 +30,8 @@ CONFIG_LUCI_LANG_ja=n
 # CONFIG_KERNEL_IPV6_MROUTE=n
 # CONFIG_IPV6=n
 # IPv6支持
-# CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-# CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_ipv6helper=y
 
 #
 # 文件系统支持
@@ -57,7 +57,7 @@ CONFIG_PACKAGE_kmod-usb3=y
 # > 访问时间控制
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 # > aria2下载
-CONFIG_PACKAGE_luci-app-aria2=n
+CONFIG_PACKAGE_luci-app-aria2=y
 # > IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
 # > 自动重启
@@ -106,11 +106,13 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-inet-diag=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_ruby=y
 CONFIG_PACKAGE_ruby-yaml=y
 CONFIG_PACKAGE_libgcc1=y
+CONFIG_PACKAGE_unzip=y
 
 # > ServerChan
 CONFIG_PACKAGE_luci-app-serverchan=y
@@ -130,7 +132,12 @@ CONFIG_PACKAGE_open-app-filter=y
 CONFIG_PACKAGE_python3-pip=y
 
 # > Adguard Home
-CONFIG_PACKAGE_luci-app-adguardhome=y
+# CONFIG_PACKAGE_luci-app-adguardhome=y
+
+# > iStore & Quickstart
+# CONFIG_PACKAGE_luci-app-quickstart=y
+# CONFIG_PACKAGE_luci-app-store=y
+# CONFIG_PACKAGE_quickstart=y
 
 # 依赖
 CONFIG_PACKAGE_curl=y
@@ -140,6 +147,7 @@ CONFIG_PACKAGE_screen=y
 CONFIG_PACKAGE_tree=y
 CONFIG_PACKAGE_vim-fuller=n
 CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_luci-lib-ipkg=y
 
 # 禁止编译默认安装
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
@@ -155,3 +163,4 @@ CONFIG_PACKAGE_wget=y
 
 # LuCI主题
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
