--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -21,8 +21,8 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_PACKAGES: false
-  UPLOAD_RELEASE: true
-  UPLOAD_ARTIFACTS: false
+  UPLOAD_RELEASE: false
+  UPLOAD_ARTIFACTS: true
   TELEGRAM_NOTIFICATION: true
   DELETE_OLD_REALEASE: true
   TZ: Asia/Shanghai
